test/driver/attributes/fail01.expected
File "fail01.ml", line 1, characters 13-16:
Error: Attribute `foo' was not used
