test/driver/attributes/fail01.ml
let x = 1 [@@foo]
